Fixes for mobile
Added instructions for installing on mobile browsers + removed eye logo since hidden work reason overlapped with hide/show buttons

--- a/src/css/enhancer.css
+++ b/src/css/enhancer.css
@@ -17,7 +17,6 @@ li:not(.work-hidden) .display-on-hide {
     padding-left: 10px;
 }
 
-.enhancer-fold .action span {
-    bottom: 4.5px;
-    position: relative;
+p.enhancer-fold {
+    width: 75%;
 }
